# pypeline-semantic-release

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bootstrap.json  bootstrap.ps1  pyproject.toml  review.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/features/: index.md
docs/getting_started/: concepts.md  index.md
docs/internals/: index.md
src/pypeline_semantic_release/: base.py  check_ci_context.py  create_release_commit.py  publish_package.py  publish_to_orphan_branch.py  steps.py
tests/: conftest.py  test_ci_context.py  test_create_release_commit.py  test_publish_package.py  test_publish_to_orphan_branch.py  utils.py
